Adição de JavaScript

--- a/index.html
+++ b/index.html
@@ -172,5 +172,6 @@
       <a href="https://github.com/VictorVahid" target="_blank">@Victor Vahid</a>
       na trilha Start na Programação da OneBitCode
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
